src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_10_lexical_analysis.snap
---
source: src/tests/let_statement/mod.rs
assertion_line: 39
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "flatcase",
        },
        position: Position {
            line: 1,
            column: 9,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 18,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 3,
        },
        position: Position {
            line: 1,
            column: 21,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 22,
        },
    },
]
