src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_11_lexical_analysis.snap
---
source: src/tests/let_statement/mod.rs
assertion_line: 39
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 3,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "camelCase",
        },
        position: Position {
            line: 1,
            column: 7,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 17,
        },
    },
    PositionedToken {
        token: False,
        position: Position {
            line: 1,
            column: 19,
        },
    },
]
