src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_12_environment.snap
---
source: src/tests/let_statement/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "PascalCase": String {
                    value: "terrible format",
                },
            },
            enclosing: None,
        },
    },
}
