src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_12_lexical_analysis.snap
---
source: src/tests/let_statement/mod.rs
assertion_line: 39
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "PascalCase",
        },
        position: Position {
            line: 1,
            column: 9,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 19,
        },
    },
    PositionedToken {
        token: String {
            literal: "terrible format",
        },
        position: Position {
            line: 1,
            column: 20,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 37,
        },
    },
]
